--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fenstergame.github.io",
-  "homepage": "https://fenstergame.github.io/fenstergame.github.io",
+  "homepage": "https://fenstergame.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
